Revision history for DBD-Cassandra

0.06    unreleased
        Automatically utf8::decode VARCHAR/TEXT columns
        Automatically pick the best compression and CQL version settings

0.05    2015/04/02
        Fix Makefile.PL to properly list the dependencies added in 0.04

0.04    2015/04/02
        Bugfix: refuse to connect if the keyspace doesn't exist
        Refactor some network code
        Compression support through Compress:LZ4 and Compress::Snappy
        Allow selecting a CQL version for the connection

0.03    2015/04/01
        Add some documentation to the main module. Mostly for CPAN
        Make keyspace an optional part of the connection's dsn
        Add some new test cases for better coverage
        Better error handling when the server misbehaves
        Some performance improvements
        Remove dependency on Protocol::CassandraCQL

0.02    2015/04/01
        Better utf8 support for queries (not result sets)

0.01    2015/03/31
        Needed something to reach Cassandra from Perl. Wrote something for it.