@@ -6,6 +6,7 @@ require Exporter;
 use Data::Dumper;
 
 our (@EXPORT_OK, %EXPORT_TAGS);
+my (%consistency_lookup);
 BEGIN {
     my %constants= (
         OPCODE_ERROR => 0,
@@ -30,6 +31,18 @@ BEGIN {
         RESULT_SET_KEYSPACE => 3,
         RESULT_PREPARED => 4,
         RESULT_SCHEMA_CHANGE => 5,
+
+        CONSISTENCY_ANY => 0,
+        CONSISTENCY_ONE => 1,
+        CONSISTENCY_TWO => 2,
+        CONSISTENCY_THREE => 3,
+        CONSISTENCY_QUORUM => 4,
+        CONSISTENCY_ALL => 5,
+        CONSISTENCY_LOCAL_QUORUM => 6,
+        CONSISTENCY_EACH_QUORUM => 7,
+        CONSISTENCY_SERIAL => 8,
+        CONSISTENCY_LOCAL_SERIAL => 9,
+        CONSISTENCY_ONE => 10,
     );
 
     @EXPORT_OK= (
@@ -55,6 +68,12 @@ BEGIN {
         constants => [ keys %constants ],
         all => [ @EXPORT_OK ]
     );
+
+    %consistency_lookup= map {
+        my $key= $_;
+        $key =~ s/CONSISTENCY_//;
+        (lc $key) => $constants{$_}
+    } keys %constants;
 
     constant->import( { %constants } );
 }
@@ -161,7 +180,15 @@ sub unpack_metadata {
 sub pack_parameters {
     my ($params)= @_;
 
-    my $consistency= delete $params->{consistency} || 1;
+    my $consistency= delete $params->{consistency};
+    if ($consistency !~ /\A[0-9]+\z/) {
+        if (defined(my $c= $consistency_lookup{lc $consistency})) {
+            $consistency= $c;
+        } else {
+            die "Unknown consistency argument: $consistency";
+        }
+    }
+
     my $flags= 0;
     if ($params->{values}) {
         $flags |= 0x01;
